# spin-pluginify

./: .gitignore  Cargo.toml  README.md  build.rs  spin-pluginify.toml
.github/workflows/: build.yml
src/: lib.rs  main.rs  plugin_manifest.rs  settings.rs  spin.rs  target.rs  task.rs
