[package]
name = "pluginify"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.2.7", features = ["derive"] }
flate2 = "1.0.26"
path-absolutize = "3.1.0"
rand = "0.8.5"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
tar = "0.4.38"
toml = "0.7.3"
url = "2.3.1"

[build-dependencies]
vergen-git2 = { version = "1.0", features = ["build", "cargo"] }
